--- a/index.html
+++ b/index.html
@@ -5,29 +5,47 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
   
   <title>Frontend Mentor | Equalizer landing page</title>
 </head>
 <body>
+  <section id="one">
+    <header>
+      <img src="assets\logo.svg" alt="">
+    </header>
+    
+    <section id="hero">
+      <h1 class="hero-text">We make your music sound extraordinary.</h1>
+      <p class="description-text">
+        A system audio equalizer specifically designed for Android and iOS. Freely tune the
+        way your music sounds with a professional grade parametric EQ & volume mixer. Control
+        bass, mids, treble, gain control, reverb, and more!
+      </p>
+    </section>
+  </section>
+  <section id="two">
+    <section id="picture">
+      <img class="phone-img" src="assets\illustration-app.png" alt="phone">
+    </section>
+  </section>
 
-  We make your music sound extraordinary.
+  <h2 class="cta-title">Premium EQ</h2>
 
-  A system audio equalizer specifically designed for Android and iOS. Freely tune the 
-  way your music sounds with a professional grade parametric EQ & volume mixer. Control 
-  bass, mids, treble, gain control, reverb, and more!
+  <p class="cta-text">
+    Get expert-level control with a robust equalizer, volume mixer, and spatial audio. Take
+    your listening experience to a whole new level and access all our incredible features!
+  </p>
 
-  Premium EQ
+  <p class="cta-price"><span>$4</span> / month</p>
 
-  Get expert-level control with a robust equalizer, volume mixer, and spatial audio. Take 
-  your listening experience to a whole new level and access all our incredible features!
+  <button class="apple">iOS Download</button>
+  <button class="android">Android Download</button>
 
-  $4 / month
-
-  iOS Download
-  Android Download
-
-  All rights reserved © Equalizer 2021
-  Have any problems? Contact us via social media or email us at equalizer@example.com
+  <footer>
+    All rights reserved © Equalizer 2021
+    Have any problems? Contact us via social media or email us at equalizer@example.com
+  </footer>
 
 </body>
 </html>
