--- a/index.html
+++ b/index.html
@@ -30,17 +30,16 @@
     </section>
   </section>
 
-  <h2 class="cta-title">Premium EQ</h2>
-
-  <p class="cta-text">
-    Get expert-level control with a robust equalizer, volume mixer, and spatial audio. Take
-    your listening experience to a whole new level and access all our incredible features!
-  </p>
-
-  <p class="cta-price"><span>$4</span> / month</p>
-
-  <button class="apple">iOS Download</button>
-  <button class="android">Android Download</button>
+  <section id="three">
+    <h2 class="cta-title">Premium EQ</h2>
+    <p class="cta-text">
+      Get expert-level control with a robust equalizer, volume mixer, and spatial audio. Take
+      your listening experience to a whole new level and access all our incredible features!
+    </p>
+    <p class="cta-price"><span>$4</span> / month</p>
+    <button class="apple">iOS Download</button>
+    <button class="android">Android Download</button>
+  </section>
 
   <footer>
     All rights reserved © Equalizer 2021
