--- a/index.html
+++ b/index.html
@@ -10,41 +10,49 @@
   <title>Frontend Mentor | Equalizer landing page</title>
 </head>
 <body>
-  <section id="one">
-    <header>
-      <img src="assets\logo.svg" alt="">
-    </header>
+  <div class="container flex flex-column">
+    <section id="one">
+      <header>
+        <img src="assets\logo.svg" alt="">
+      </header>
     
-    <section id="hero">
-      <h1 class="hero-text">We make your music sound extraordinary.</h1>
-      <p class="description-text">
-        A system audio equalizer specifically designed for Android and iOS. Freely tune the
-        way your music sounds with a professional grade parametric EQ & volume mixer. Control
-        bass, mids, treble, gain control, reverb, and more!
+      <section id="hero">
+        <h1 class="hero-text">We make your music sound extraordinary.</h1>
+        <p class="description-text">
+          A system audio equalizer specifically designed for Android and iOS. Freely tune the
+          way your music sounds with a professional grade parametric EQ & volume mixer. Control
+          bass, mids, treble, gain control, reverb, and more!
+        </p>
+      </section>
+    </section>
+    <section id="two">
+      <section id="picture">
+        <img class="phone-img" src="assets\illustration-app.png" alt="phone">
+      </section>
+    </section>
+    <section id="three">
+      <h2 class="cta-title">Premium EQ</h2>
+      <p class="cta-text">
+        Get expert-level control with a robust equalizer, volume mixer, and spatial audio. Take
+        your listening experience to a whole new level and access all our incredible features!
       </p>
+      <p class="cta-price"><span class="span-big">$4</span> / month</p>
+      <button class="apple flex flex-center"><img src="assets\icon-apple.svg" alt="apple-logo" class="apple-logo">iOS Download</button>
+      <button class="android flex flex-center"><img src="assets\icon-android.svg" alt="android-logo" class="android-logo">Android Download</button>
     </section>
-  </section>
-  <section id="two">
-    <section id="picture">
-      <img class="phone-img" src="assets\illustration-app.png" alt="phone">
-    </section>
-  </section>
-
-  <section id="three">
-    <h2 class="cta-title">Premium EQ</h2>
-    <p class="cta-text">
-      Get expert-level control with a robust equalizer, volume mixer, and spatial audio. Take
-      your listening experience to a whole new level and access all our incredible features!
-    </p>
-    <p class="cta-price"><span>$4</span> / month</p>
-    <button class="apple">iOS Download</button>
-    <button class="android">Android Download</button>
-  </section>
-
-  <footer>
-    All rights reserved © Equalizer 2021
-    Have any problems? Contact us via social media or email us at equalizer@example.com
-  </footer>
+    <footer>
+      <img src="assets\logo.svg" alt="">
+      <p>
+        All rights reserved © Equalizer 2021
+        Have any problems? Contact us via social media or email us at <span class="span-small">equalizer@example.com</span>
+      </p>
+      <div class="media-widgets flex">
+        <img src="assets\icon-facebook.svg" alt="facebook-link">
+        <img src="assets\icon-instagram.svg" alt="instagram-link">
+        <img src="assets\icon-twitter.svg" alt="twitter-link">
+      </div>
+    </footer>
+  </div>
 
 </body>
 </html>
