--- a/index.html
+++ b/index.html
@@ -11,26 +11,24 @@
 </head>
 <body>
   <div class="container flex flex-column">
-    <section id="one">
-      <header>
-        <img src="assets\logo.svg" alt="">
-      </header>
-    
-      <section id="hero">
-        <h1 class="hero-text">We make your music sound extraordinary.</h1>
-        <p class="description-text">
-          A system audio equalizer specifically designed for Android and iOS. Freely tune the
-          way your music sounds with a professional grade parametric EQ & volume mixer. Control
-          bass, mids, treble, gain control, reverb, and more!
-        </p>
+      <section id="one">
+        <header>
+          <img src="assets\logo.svg" alt="">
+        </header>
+          <h1 class="hero-text">We make your music sound extraordinary.</h1>
+          <p class="description-text">
+            A system audio equalizer specifically designed for Android and iOS. Freely tune the
+            way your music sounds with a professional grade parametric EQ & volume mixer. Control
+            bass, mids, treble, gain control, reverb, and more!
+          </p>
       </section>
-    </section>
+
     <section id="two">
-      <section id="picture">
-        <img class="phone-img" src="assets\illustration-app.png" alt="phone">
-      </section>
+      <div id="black-bg">
+        <section id="picture"><img class="phone-img" src="assets\illustration-app.png" alt="phone"></section>
+      </div>
     </section>
-    <section id="three">
+    <section id="call-to-action">
       <h2 class="cta-title">Premium EQ</h2>
       <p class="cta-text">
         Get expert-level control with a robust equalizer, volume mixer, and spatial audio. Take
