--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
           </p>
       </section>
 
-    <section id="two">
-      <div id="black-bg">
-        <section id="picture"><img class="phone-img" src="assets\illustration-app.png" alt="phone"></section>
+    <section class="two">
+      <div class="black-bg">
+        <div class="picture"><img class="phone-img" src="assets\illustration-app.png" alt="phone"></div>
       </div>
     </section>
-    <section id="call-to-action">
+    <section class="call-to-action">
       <h2 class="cta-title">Premium EQ</h2>
       <p class="cta-text">
         Get expert-level control with a robust equalizer, volume mixer, and spatial audio. Take
